maven: resolve run configuration system properties https://youtrack.jetbrains.com/issue/IDEA-120890#comment=27-826442 (cherry picked from commit 54a94da)